fixes #8 - in-memory OWL inferencing
- inferencing with OWL micro
- prepare-fn + preparation estimates
- document memory usage
- exclude anonymous resource results